SERVER-35415 Increase default transaction lock acquisition timeout to 5 milliseconds